[package]
name = "meeting_room_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"

[[bin]]
name = "meeting-room-exporter"
path = "src/main.rs"